[gd_scene load_steps=2 format=2]

[ext_resource path="res://ColorButton.gd" type="Script" id=1]

[node name="ColorButton2dNode" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 180.0
grow_horizontal = 0
size_flags_horizontal = 3
color = Color( 0.0980392, 0.133333, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 480.0
margin_bottom = 180.0
size_flags_horizontal = 3
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButtonUpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="ResetButtonUpTimer" to="." method="_on_ResetButtonUpTimer_timeout"]
